[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/stars.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/player1.png" type="Texture" id=2]
[ext_resource path="res://Assets/spaceMeteors_001.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Bullets.gd" type="Script" id=5]
[ext_resource path="res://Assets/enemy1.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Meteor.gd" type="Script" id=7]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=8]

[node name="Game" type="Node2D"]
position = Vector2( 1.54919, -4.64755 )

[node name="Background" type="Node2D" parent="."]
position = Vector2( 3.38721, 10.161 )
scale = Vector2( 0.25, 0.25 )

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 2022.98, 1157.89 )
scale = Vector2( 1.06, 0.93 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 4534.0
margin_bottom = 3112.0
color = Color( 0, 0, 0, 0.643137 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy Bullets" type="Node2D" parent="."]

[node name="Bullets" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="Bullets"]
one_shot = true

[node name="Meteors" type="Node2D" parent="."]
position = Vector2( 366.451, -27.3524 )
__meta__ = {
"_edit_group_": true
}

[node name="Meteor" type="RigidBody2D" parent="Meteors"]
position = Vector2( 294.451, -11.3524 )
mode = 2
gravity_scale = 0.0
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Meteors/Meteor"]
position = Vector2( -3.48615, -94.7708 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Meteors/Meteor"]
position = Vector2( 0, -100 )
scale = Vector2( 0.25, 0.25 )
polygon = PoolVector2Array( 64.5, -91, 64.5, -89.6, 69.5, -86.6, 69.5, -84.2, 107.5, -37.6, 107.5, 40.4, 107.4, 42.5, 105.4, 42.5, 65.4, 90.5, 61.8, 90.5, 14.2, 105.5, -51, 105.5, -73.5, 103.3, -73.5, 101.7, -77.5, 99.7, -77.5, 97, -107.5, 33, -107.5, -39.5, -72.5, -86.5, -68.8, -86.5, -9.1, -105.5, 17.1, -105.5 )

[node name="Explosions" type="Node2D" parent="."]
visible = false

[node name="HUD" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Health" type="Label" parent="HUD"]
margin_left = 30.8368
margin_top = 47.7035
margin_right = 184.837
margin_bottom = 116.703
rect_rotation = 0.0761475
text = "Health:


"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HUD"]
margin_left = 846.451
margin_top = 28.6476
margin_right = 1000.45
margin_bottom = 97.6476
rect_rotation = 0.0761475
text = "Score:
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemies" type="Node2D" parent="."]
visible = false
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Enemies"]
position = Vector2( 0, -100 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enemies"]
position = Vector2( 0, -100 )
scale = Vector2( 3, 3 )
polygon = PoolVector2Array( 6, -19, 6, -14, 9.5, 0, 23.8, 0, 25, 1.2, 25, 18, 23.2, 18, 15, 18.8, 10, 22, -16, 22, -25, 14.5, -25, -14.5, -16, -21.9, 2, -22 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 470.451, 492.648 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player"]
scale = Vector2( 0.2, 0.2 )
polygon = PoolVector2Array( 13.5, -148.5, 13.5, -146.2, 20.5, -138.3, 20.5, -136, 29.5, -116.9, 29.5, -112.5, 37.5, -81.8, 37.5, 29.5, 78.5, 92.9, 78.5, 106.5, 77.6, 106.5, 38.4, 117, 20.7, 154.5, -21.7, 154.5, -37.8, 118.5, -40.8, 118.5, -78.5, 107.6, -78.5, 92.9, -38.5, 32.9, -38.5, -82.8, -26, -129.5, -24.7, -129.5, -17.8, -144.5, -16.4, -144.5, -7.5, -154.2, 5.5, -154.5 )
[connection signal="timeout" from="Bullets/Timer" to="Bullets" method="_on_Timer_timeout"]
[connection signal="health_changed" from="Player" to="HUD" method="_on_Player_health_changed"]
[connection signal="score_changed" from="Player" to="HUD" method="_on_Player_score_changed"]
